src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__fullscreen__fullscreen_view_auto_scroll_to_bottom.snap
---
source: src/tui/snapshot_tests/fullscreen.rs
expression: terminal.backend()
---
"╔══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╗"
"║  RUNNING   #99 — Add login flow  model: claude-opus-4-5  mode: orchestrator  agent: claude                          ║"
"╚══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝"
"╔═══════════════════════════════════════════════════[ Agent Output ]═══════════════════════════════════════════════════╗"
"║                                                                                                                      ║"
"║Content for section 19.                                                                                               ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║## Section 20                                                                                                         ║"
"║                                                                                                                      ║"
"║Content for section 20.                                                                                               ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║## Section 21                                                                                                         ║"
"║                                                                                                                      ║"
"║Content for section 21.                                                                                               ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║## Section 22                                                                                                         ║"
"║                                                                                                                      ║"
"║Content for section 22.                                                                                               ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║## Section 23                                                                                                         ║"
"║                                                                                                                      ║"
"║Content for section 23.                                                                                               ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║## Section 24                                                                                                         ║"
"║                                                                                                                      ║"
"║Content for section 24.                                                                                               ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║## Section 25                                                                                                         ║"
"║                                                                                                                      ║"
"║Content for section 25.                                                                                               ║"
"╚══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝"
"╔══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╗"
"║ Cost: $0.12   Elapsed: 2m30s   Files: 0   Phase: —   Activity: _ Writing tests    [Esc] back  [↑↓] scroll            ║"
"╚══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝"
