src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__fullscreen__fullscreen_view_markdown_last_message.snap
---
source: src/tui/snapshot_tests/fullscreen.rs
expression: terminal.backend()
---
"╔══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╗"
"║  RUNNING   #99 — Add login flow  model: claude-opus-4-5  mode: orchestrator  agent: claude                          ║"
"╚══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝"
"╔═══════════════════════════════════════════════════[ Agent Output ]═══════════════════════════════════════════════════╗"
"║# Status Update                                                                                                       ║"
"║                                                                                                                      ║"
"║Running all tests now.                                                                                                ║"
"║                                                                                                                      ║"
"║• unit tests                                                                                                          ║"
"║• integration tests                                                                                                   ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"╚══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝"
"╔══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╗"
"║ Cost: $0.12   Elapsed: 2m30s   Files: 0   Phase: —   Activity: _ Writing tests    [Esc] back  [↑↓] scroll            ║"
"╚══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝"
